cursive-bootstrap/tests/ui/E-TYP/E-TYP-2061.cursive
// RUN: compile-fail
// DIAG: E-TYP-2061
// SPEC: 5.4
// DESC: Duplicate method name in modal state

modal Connection {
    @Open {
        procedure send(~) -> () { }
        procedure send(~) -> () { } //~ ERROR E-TYP-2061
    }
    @Closed { }
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
